<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.android.triviagame.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title"
            android:paddingBottom="5dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/description" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:hint="@string/name"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Hedwig" />

                <RadioButton
                    android:id="@+id/q1_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Scabbers" />

                <RadioButton
                    android:id="@+id/q1_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Dobby" />
            </RadioGroup>

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q2_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Ron" />

                <RadioButton
                    android:id="@+id/q2_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Hermoine" />

                <RadioButton
                    android:id="@+id/q2_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Sirius" />
            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q3_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Godrics_Hollow" />

                <RadioButton
                    android:id="@+id/q3_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/London" />

                <RadioButton
                    android:id="@+id/q3_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Little_Whinging" />
            </RadioGroup>

            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q4_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Grimmauld_Place" />

                <RadioButton
                    android:id="@+id/q4_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/Privet_Drive" />

            </RadioGroup>

            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <CheckBox
                android:id="@+id/q5_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/Tom_Riddle" />

            <CheckBox
                android:id="@+id/q5_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/You_Know_Who" />

            <CheckBox
                android:id="@+id/q5_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/Lord_Voldemort" />

            <CheckBox
                android:id="@+id/q5_a4"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/All_of_the_above" />

            <TextView
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6"/>

            <EditText
                android:id="@+id/q6_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q6_text_input"
                android:inputType="textCapWords"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="showResults"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>